# UKANWeed

./: .gitignore  README.md  exp.ipynb  main.py  preprocess.py  pyproject.toml  scripts.sh
SegFormer/: train.py  val.py
Seg_UKAN/: archs.py  dataset.py  grid.py  inference.py  losses.py  metrics.py  requirements.txt  test.py  train.py  train_long.py  utils.py  val-complexity.py  val-inference_time.py  val-inference_time2.py  val-multiclass.py  val.py
UKAN/: config.yml
outputs/: overall_results.csv
outputs/resnet/: config.yml
parameters/: UKAN.yaml  UNET.yaml
trained_models/UKAN/: model-32.pth
